# dear_ender_dragon_v3

./: .gitignore  README.md  config_resolved.yaml  pyproject.toml  run_tensorboard.sh  run_training.sh  uv_lock.sh
configs/: eval.yaml  ppo_cartpole.yaml  ppo_cartpole_default.yaml  ppo_cartpole_template.yaml  ppo_cartpole_tuned.yaml  ppo_lunarlander.yaml  train.yaml
configs/algo/: ppo_gold.yaml
configs/env/: _base.yaml  cartpole_default.yaml  highway_default.yaml  highway_grayscale_image.yaml  highway_image.yaml  lunarlander_default.yaml
configs/experiment/: cartpole_gold.yaml  highway_default_benchmark.yaml  highway_image_gold.yaml  lunarlander_gold.yaml
configs/logging/: default.yaml
configs/lr_scheduler/: linear.yaml
configs/model/: cnn_actor_critic_gold.yaml  mlp_actor_critic_gold.yaml
configs/optim/: adam_gold.yaml
scripts/: eval.py  train.py
src/: types.py
src/algo/: __init__.py  base.py  factory.py  ppo.py
src/buffers/: __init__.py  rollout_buffer.py
src/envs/: __init__.py  make_env.py  wrappers.py
src/models/: __init__.py  base.py  cnn_actor_critic.py  factory.py  mlp_actor_critic.py  nn_utils.py
src/utils/: __init__.py  assertions.py  checkpoint.py  device.py  logging.py  seed.py  tensor.py
structure/: phase0_structure.txt  planned_structure.txt
tests/: conftest.py  test_make_env.py  test_mlp_actor_critic.py  test_ppo.py  test_rollout_buffer.py  test_utils_checkpoint.py  test_utils_logging.py  test_utils_seed.py
