[project]
name = "dear_ender_dragon_v3"
version = "0.0.0"
requires-python = ">=3.11.4,<3.12"
dependencies = [
    "numpy>=2.4,<3",
    "gymnasium>=1.2,<2",
    "torch==2.10.0+cu130",
    "torchvision==0.25.0+cu130",
    "pyyaml>=6.0,<7",
    "tensorboard>=2.20,<3",
    "hydra-core>=1.3,<2",
    "omegaconf>=2.3,<3",
]

[dependency-groups]
dev = [
    "black>=26.1,<27",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
default = true
